# VD_Prototype

./: CMakeLists.txt  README.md
VUFS/include/: BucketForDisk.h  DynamicDisk.h  PolynomialSolver.h  RandomDiskGenerator.h  StringFunctions.h  TimeStatistics.h  nrutil.h  rg_Circle2D.h  rg_Point2D.h  rg_Polynomial.h
VUFS/lib/Win32/Debug/: VUFS.idb
VUFS/lib/x64/Debug/: VUFS.idb
data/: voronoi_test100.txt
include/: BoundaryPolygon.h  MyEdge.h  MyVD.h  MyVertex.h  Vertex2D.h  test.h
src/: BoundaryPolygon.cpp  MyEdge.cpp  MyVertex.cpp  Vertex2D.cpp  main.cpp
